# clipt

./: .gitignore  AUTHORS  COPYING  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.old  README  TODO  clipt.1  clipt.c  clipt.rc  cliptnotify.sh  config.h.in  configure  configure.ac  includes.h  utils.c  utils.h
samples/: clipt.rc  cliptnotify.sh  pomscript.sh
